opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/virtual_dom_toplayer"
bug-reports: "https://github.com/janestreet/virtual_dom_toplayer/issues"
dev-repo: "git+https://github.com/janestreet/virtual_dom_toplayer.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/virtual_dom_toplayer/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "am_running_how_js"
  "core"
  "incr_dom"
  "js_of_ocaml_patches"
  "ppx_css"
  "ppx_jane"
  "sexplib"
  "virtual_dom"
  "dune"                {>= "3.11.0"}
  "gen_js_api"          {= "1.1.2+jst"}
  "js_of_ocaml"         {>= "5.1.1" & < "5.7.0"}
  "js_of_ocaml-ppx"     {>= "5.1.1" & < "5.7.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml bindings for the floating positioning library for 'toplevel' virtual dom components"
description: "
The floating positioning library itself may be found at https://floating-ui.com/
"
