(library
 (name vdom_toplayer)
 (public_name virtual_dom_toplayer.popover)
 (preprocess
  (pps js_of_ocaml-ppx ppx_jane ppx_css))
 (libraries byo_portal_private virtual_dom am_running_how_js
   floating_positioning_new incr_dom.javascript_profiling virtual_dom.css_gen
   core incr_dom js_of_ocaml sexplib testable_timeout time_now
   virtual_dom.ui_effect))
